src/test/resources/org/xmlcml/www/convention/dictionary/invalid/entry-must-have-single-definition-child-1.cml
<?xml version="1.0" encoding="utf-8" ?>
<cml xmlns="http://www.xml-cml.org/schema"
     xmlns:xhtml="http://www.w3.org/1999/xhtml"
     xmlns:dc="http://purl.org/dc/elements/1.1/"
     xmlns:conventions="http://www.xml-cml.org/convention/"
     xmlns:dictionaries="http://www.xml-cml.org/dictionary/"
     convention="conventions:dictionary">
    <dc:title>test file for http://www.xml-cml.org/convention/dictionary convention</dc:title>
    <dc:description>An entry element MUST contain a single definition child element</dc:description>
    <dc:author>J A Townsend</dc:author>
    <dc:rights>Copyright J A Townsend jat45@cantab.net 2009.</dc:rights>
    <dc:date>2010-12-23</dc:date>
    <dictionary title="dummy test dictionary" namespace="http://www.xml-cml.org/dictionary/dummy/" dictionaryPrefix="dummy">
        <description>
            <xhtml:p>
                A dummy dictionary for testing
            </xhtml:p>
        </description>
        <entry id="e1" term="first entry" title="first entry" dataType="xsd:string" unitType="dictionaries:dummy" units="dictionaries:dummy">
            <description>
                <xhtml:p>
                    the first entry in the dictionary
                </xhtml:p>
            </description>
        </entry>
</dictionary>
</cml>